--- a/inventories/group_vars/mawus_test.yml
+++ b/inventories/group_vars/mawus_test.yml
@@ -45,35 +45,34 @@ mawus__pg_backup_roles: roles.sql
 mawus__pg_backup_idsrv: idsrv.20220307.dump
 mawus__pg_backup_www: maw_website.20220307.dump
 
+mawus__version_redis: 6
+mawus__version_postgres: 14
+mawus__version_solr: 8
+
+mawus__podman_image_redis: docker.io/redis:6-alpine
+mawus__podman_image_postgres: docker.io/postgres:14-alpine
+mawus__podman_image_solr: docker.io/solr:8
+
+mawus__podman_pod: test-maw-pod
+mawus__podman_env_dir: "{{ remote_mawus_root }}/podman-env"
+mawus__podman_image_photos: localhost/maw-photos-test
+mawus__podman_image_files: localhost/maw-files-test
+mawus__podman_image_auth: localhost/maw-auth-test
+mawus__podman_image_api: localhost/maw-api-test
+mawus__podman_image_www: localhost/maw-www-test
+mawus__podman_image_gateway: localhost/maw-gateway-test
+mawus__podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
+mawus__podman_image_certbot: ""
+mawus__podman_image_cache_sync: docker.io/aerisg222/maw-cache-sync:latest
+mawus__podman_image_solr_indexer: docker.io/aerisg222/maw-solr-indexer:latest
+mawus__podman_image_reverse_geocode: docker.io/aerisg222/maw-reverse-geocode:latest
+mawus__podman_image_gdrive: ""
+mawus__podman_publish_ports:
+  - 8080:8080
+  - 8443:8443
+
 
 mawus_config_test:
-  # dependency versions
-  version_redis: 6
-  version_postgres: 14
-  version_solr: 8
-
-  podman_image_redis: docker.io/redis:6-alpine
-  podman_image_postgres: docker.io/postgres:14-alpine
-  podman_image_solr: docker.io/solr:8
-
-  podman_podname: test-maw-pod
-  podman_env_dir: "{{ remote_mawus_root }}/podman-env"
-  podman_image_photos: localhost/maw-photos-test
-  podman_image_files: localhost/maw-files-test
-  podman_image_auth: localhost/maw-auth-test
-  podman_image_api: localhost/maw-api-test
-  podman_image_www: localhost/maw-www-test
-  podman_image_gateway: localhost/maw-gateway-test
-  podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
-  podman_image_certbot: ""
-  podman_image_cache_sync: docker.io/aerisg222/maw-cache-sync:latest
-  podman_image_solr_indexer: docker.io/aerisg222/maw-solr-indexer:latest
-  podman_image_reverse_geocode: docker.io/aerisg222/maw-reverse-geocode:latest
-  podman_image_gdrive: ""
-  podman_publish_ports:
-    - 8080:8080
-    - 8443:8443
-
   # postgres sql accounts for site
   sql_username: svc_www_maw
   sql_password: "{{ vault_password_sql_svc_www_maw }}"
