--- a/roles/mikeandwan_us/tasks/maw_pull_images.yml
+++ b/roles/mikeandwan_us/tasks/maw_pull_images.yml
@@ -3,19 +3,19 @@
   containers.podman.podman_image:
     name: "{{ item }}"
   loop:
-    - "{{ mawus_config.podman_image_redis }}"
-    - "{{ mawus_config.podman_image_postgres }}"
-    - "{{ mawus_config.podman_image_solr }}"
-    - "{{ mawus_config.podman_image_photos }}"
-    - "{{ mawus_config.podman_image_files }}"
-    - "{{ mawus_config.podman_image_auth }}"
-    - "{{ mawus_config.podman_image_api }}"
-    - "{{ mawus_config.podman_image_www }}"
-    - "{{ mawus_config.podman_image_gateway }}"
-    - "{{ mawus_config.podman_image_maw_certs }}"
-    - "{{ mawus_config.podman_image_certbot }}"
-    - "{{ mawus_config.podman_image_cache_sync }}"
-    - "{{ mawus_config.podman_image_solr_indexer }}"
-    - "{{ mawus_config.podman_image_reverse_geocode }}"
-    - "{{ mawus_config.podman_image_gdrive }}"
+    - "{{ mawus__podman_image_redis }}"
+    - "{{ mawus__podman_image_postgres }}"
+    - "{{ mawus__podman_image_solr }}"
+    - "{{ mawus__podman_image_photos }}"
+    - "{{ mawus__podman_image_files }}"
+    - "{{ mawus__podman_image_auth }}"
+    - "{{ mawus__podman_image_api }}"
+    - "{{ mawus__podman_image_www }}"
+    - "{{ mawus__podman_image_gateway }}"
+    - "{{ mawus__podman_image_maw_certs }}"
+    - "{{ mawus__podman_image_certbot }}"
+    - "{{ mawus__podman_image_cache_sync }}"
+    - "{{ mawus__podman_image_solr_indexer }}"
+    - "{{ mawus__podman_image_reverse_geocode }}"
+    - "{{ mawus__podman_image_gdrive }}"
   when: item | length > 0
