--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -29,15 +29,15 @@
   vars:
     maw_as__dir: "{{ remote_mawus_root }}/admin_scripts"
     maw_as__do_backup: "{{ mawus__env == 'prod' }}"
-    maw_as__pod: "{{ mawus_config.podman_podname }}"
-    maw_as__postgres_envfile: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
-    maw_as__postgres_image: "{{ mawus_config.podman_image_postgres }}"
-    maw_as__certbot_image: "{{ mawus_config.podman_image_certbot }}"
-    maw_as__gdrive_image: "{{ mawus_config.podman_image_gdrive }}"
-    maw_as__cache_sync_image: "{{ mawus_config.podman_image_cache_sync }}"
-    maw_as__maw_certs_image: "{{ mawus_config.podman_image_maw_certs }}"
-    maw_as__reverse_geocode_image: "{{ mawus_config.podman_image_reverse_geocode }}"
-    maw_as__solr_indexer: "{{ mawus_config.podman_image_solr_indexer }}"
+    maw_as__pod: "{{ mawus__podman_pod }}"
+    maw_as__postgres_envfile: "{{ mawus__podman_env_dir }}/maw-postgres.env"
+    maw_as__postgres_image: "{{ mawus__podman_image_postgres }}"
+    maw_as__certbot_image: "{{ mawus__podman_image_certbot }}"
+    maw_as__gdrive_image: "{{ mawus__podman_image_gdrive }}"
+    maw_as__cache_sync_image: "{{ mawus__podman_image_cache_sync }}"
+    maw_as__maw_certs_image: "{{ mawus__podman_image_maw_certs }}"
+    maw_as__reverse_geocode_image: "{{ mawus__podman_image_reverse_geocode }}"
+    maw_as__solr_indexer: "{{ mawus__podman_image_solr_indexer }}"
   when: ansible_connection != 'local'
 
 - name: Include maw_pull_images.yml
