--- a/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
@@ -1,9 +1,9 @@
 - name: set role password
   containers.podman.podman_container:
     name: "{{ mawus__env }}-maw-pginit-role-password"
-    pod: "{{ mawus_config.podman_podname }}"
-    image: "{{ mawus_config.podman_image_postgres }}"
-    env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
+    pod: "{{ mawus__podman_pod }}"
+    image: "{{ mawus__podman_image_postgres }}"
+    env_file: "{{ mawus__podman_env_dir }}/maw-postgres.env"
     interactive: true
     state: started
     command:
