--- a/roles/mikeandwan_us/tasks/maw_maintenance.yml
+++ b/roles/mikeandwan_us/tasks/maw_maintenance.yml
@@ -34,8 +34,8 @@
     solr_idx__service: "{{ mawus__env }}-solr-indexer"
     solr_idx__pod: "{{ mawus__podman_pod }}"
     solr_idx__image: "{{ mawus__podman_image_solr_indexer }}"
-    solr_idx__sql_username: "{{ mawus_config.sql_solr_username }}"
-    solr_idx__sql_password: "{{ mawus_config.sql_solr_password }}"
+    solr_idx__sql_username: "{{ mawus__sql_solr_username }}"
+    solr_idx__sql_password: "{{ mawus__sql_solr_password }}"
     solr_idx__calendar: '00:50:00'
 
 - name: Configure Postgres Role Backup
